--- a/khmer/local.css
+++ b/khmer/local.css
@@ -102,3 +102,14 @@ samp, kbd {
 .meaning:after {
     content:"’";
 }
+
+.reslinks dt {
+    font-size: 80%;
+    }
+.reslinks dd {
+    font-size: 90%;
+    }
+
+
+
+
